Apply comments